--- a/excursion/resources/css/style.css
+++ b/excursion/resources/css/style.css
@@ -4,14 +4,31 @@ body {
 }
 
 h1 {
-  font-family: Veranda;
+  font-family: Verdana;
   font-weight: normal;
   font-size: 50px;
   color: white;
   text-align: center;
 }
 
+h2, h3 {
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+p {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
+}
+
 nav {
   color: Aquamarine;
   font-size: 16px;
+}
+
+footer {
+  text-align: right;
+  color: gray;
 }
